# bigquery-cloudbuild-app

./: .gitignore  AUTHORS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: deploy_sandbox.yaml
app/: __init__.py  main.py
app/api/: api.py
app/gcp/: base_client.py
app/gcp/big_query/: big_query_client.py  big_query_table.py  big_query_uploader.py
app/models/: models.py
app/utils/: cloud_project_utils.py  data_string_utils.py  data_type_utils.py  file_utils.py  gbq_utils.py
docs/: CONTRIBUTING.md  Makefile  conf.py  index.rst  make.bat
